@startuml diagrama_classes_persistencia
' Diagrama de Classes da PERSISTÊNCIA - GestEventos
' Renderize em https://www.plantuml.com/plantuml ou na extensao PlantUML do VS Code.
skinparam classAttributeIconSize 0
skinparam nodesep 25
skinparam ranksep 45
hide empty members

class RepositorioJson<T extends EntidadeBase> {
  # caminho_arquivo : str
  # classe : type
  + __init__(caminho_arquivo : str, classe : type)
  # _carregar_tudo() : list<dict>
  # _salvar_tudo(registros : list<dict>) : None
  # _proximo_id() : int
  + inserir(entidade : T) : T
  + listar_todos() : list<T>
  + buscar_por_id(id : int) : T
  + atualizar(entidade : T) : bool
  + excluir(id : int) : bool
}

class UsuarioRepositorio {
  + buscar_por_login(login : str) : Usuario
}

class CategoriaRepositorio {
  + buscar_por_nome(parte : str) : list<Categoria>
}

class LocalRepositorio {
  + buscar_por_nome(parte : str) : list<Local>
}

class EventoRepositorio {
  + buscar_por_titulo(parte : str) : list<Evento>
  + listar_por_categoria(categoria_id : int) : list<Evento>
  + listar_por_organizador(organizador_id : int) : list<Evento>
}

class LoteIngressoRepositorio {
  + listar_por_evento(evento_id : int) : list<LoteIngresso>
}

class CupomDescontoRepositorio {
  + buscar_por_codigo(codigo : str) : CupomDesconto
}

class InscricaoRepositorio {
  + listar_por_participante(participante_id : int) : list<Inscricao>
  + listar_por_lote(lote_id : int) : list<Inscricao>
  + buscar_por_codigo_ingresso(codigo : str) : Inscricao
}

class PagamentoRepositorio {
  + buscar_por_inscricao(inscricao_id : int) : Pagamento
}

' ===== Herança: todos os repositórios especializam a base genérica =====
RepositorioJson <|-- UsuarioRepositorio
RepositorioJson <|-- CategoriaRepositorio
RepositorioJson <|-- LocalRepositorio
RepositorioJson <|-- EventoRepositorio
RepositorioJson <|-- LoteIngressoRepositorio
RepositorioJson <|-- CupomDescontoRepositorio
RepositorioJson <|-- InscricaoRepositorio
RepositorioJson <|-- PagamentoRepositorio

' ===== Layout: distribui os repositórios em duas fileiras (arestas ocultas) =====
UsuarioRepositorio   -[hidden]down- LoteIngressoRepositorio
CategoriaRepositorio -[hidden]down- CupomDescontoRepositorio
LocalRepositorio     -[hidden]down- InscricaoRepositorio
EventoRepositorio    -[hidden]down- PagamentoRepositorio

' ===== Dependência para o modelo =====
note bottom of RepositorioJson
  Usa to_dict() / from_dict()
  das classes de EntidadeBase
  para serializar e desserializar
  os objetos em arquivos .json
end note

@enduml
